--- a/1. Bronze - Import e Acesso Data Lake Storage Gen2 (ADLS).ipynb
+++ b/1. Bronze - Import e Acesso Data Lake Storage Gen2 (ADLS).ipynb
@@ -41,7 +41,7 @@
     }
    ],
    "source": [
-    "# Criar uma pasta no Databricks para fazer vínculo. A pasta deve estar no mount point do projeto\n",
+    "# Criar uma pasta no Databricks para fazer vínculo. A pasta deve estar no mount point do projeto.\n",
     "\n",
     "%fs mkdirs /mnt/ProjetoX"
    ]
