--- a/3. Gold - Agregação e Regras de Negócio.ipynb
+++ b/3. Gold - Agregação e Regras de Negócio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -16,16 +16,16 @@
    "source": [
     "\"\"\" Descrição do projeto Gold (Base final para BI/Analytics):\n",
     "    1- Filtrar Colunas;\n",
-    "    2- Criar novas coluna com somatório de todas as batidas\n",
-    "    3- Renomear colunas para deixar mais próximas da linguagem de negócio\n",
-    "    4- Excluir dados com a classificação = [\"Sem Registro\",\"Não Informado\"]\n",
-    "    5- Inserir Coluna com data de atualização\n",
+    "    2- Criar novas coluna com somatório de todas as batidas;\n",
+    "    3- Renomear colunas para deixar mais próximas da linguagem de negócio;\n",
+    "    4- Excluir dados com a classificação = [\"Sem Registro\",\"Não Informado\"];\n",
+    "    5- Inserir Coluna com data de atualização;\n",
     "    6- Salvar na camada Gold particionada por UF > 'Estado' \"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -205,7 +205,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<style scoped>\n",
@@ -302,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -334,6 +333,9 @@
    },
    "notebookName": "3. ProjetoX - Camada Gold",
    "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
